@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title Domain Model - Mark Show Proposal as Accepted (US317)

hide circles
hide methods

package "Show Proposal Subsystem" {

    class AcceptProposalAndCreateShowController {
        +acceptProposalAndCreateShow(proposal): Optional<Show>
    }

    class ShowProposal {
        +setStatus(COLLABORATOR_APPROVED)
        +getStatus(): ShowProposalStatus
        +getShowRequest(): ShowRequest
        +identity(): Long
    }

    class ShowProposalStatus {
        (CUSTOMER_APPROVED, COLLABORATOR_APPROVED, ...)
    }

    class ShowProposalRepository {
        +saveInStore(proposal)
        +findByID(id): Optional<ShowProposal>
        +getUpdatedProposals(): Optional<List<ShowProposal>>
    }

    class VerifyShowProposalStatusController {
        +wasShowProposalSent(proposal): boolean
    }
}

package "Show Subsystem" {

    class CreateShowController {
        +createShowFromProposal(proposal): Optional<Show>
    }

    class ShowRepository {
        +findDuplicateShow(location, date, customerID): Optional<Show>
        +saveInStore(show)
    }

    class ShowRequest {
        +getCostumer(): Customer
        +identity(): Long
    }

    class Customer {
        +identity(): Long
    }
}

' Relationships
AcceptProposalAndCreateShowController --> ShowProposal : updates >
AcceptProposalAndCreateShowController --> VerifyShowProposalStatusController : validates >
AcceptProposalAndCreateShowController --> CreateShowController : delegates >
AcceptProposalAndCreateShowController --> ShowProposalRepository : saves proposal >

ShowProposal --> ShowProposalStatus
ShowProposal --> ShowRequest

CreateShowController --> ShowProposalRepository : loads proposal >
CreateShowController --> ShowRepository : stores show >
ShowRequest --> Customer : belongs to >

@enduml
